# sheet-music-extractor

./: .gitignore  README-ko.md  README.md  run.ps1  run.sh
backend/: pyproject.toml  reset_storage.py  run.sh  test_minimal.py  test_strategy.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: database.py
backend/app/models/: video.py
backend/app/schemas/: video.py
backend/app/services/: extractor.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  index.css
