[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pip>=26.1.2",
    "python-multipart>=0.0.32",
    "scenedetect>=0.7",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
